[package]
name = "rpg-server"
version = "0.1.0"
authors = ["jprochazk <honza.spacir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simple_logger = "1.6.0"
ws = "0.9.1"
crossbeam = "0.7.3"
crossbeam-channel = "0.4.2"
rpg-server = { path = "." }
